# Aviation_LLMOps_Project

./: .gitignore  Dockerfile  README.md  api_test.py  ingest.py  pyproject.toml  requirements.txt
app/: app.py  legal_engine.py  main.py
data/docs/: 1008:2008.html  1107:2006.html  261:2004.html
data/raw/: 261:2004.html
tests/: eval_tests.json  run_evals.py  test_rag.py
