[project]
name = "aviation-llmops-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "lxml>=6.1.0",
    "openai>=2.36.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.46.0",
]
