[project]
name = "aviation-llmops-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "langchain>=1.2.18",
    "langchain-classic>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "langchainhub>=0.1.21",
    "lxml>=6.1.0",
    "onnxruntime<1.26.0",
    "openai>=2.36.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "uvicorn>=0.46.0",
]
